methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:6: error: expected class or object definition
def faireV() {
^PictureMono2:22: error: expected class or object definition
def fairetouslesV() {
^PictureMono2:42: error: expected class or object definition
def faireO() {
^