methods.picture.PictureMono2.scala.code
override def run() {
	fairetouslesV()
  fairetouslesO()
}

def faireV() {
  baisseBrosse()
  leveBrosse()
 	gauche()
 	avance()
  droite()
 	avance()
 	baisseBrosse()  	
  leveBrosse()
  avance()
 	droite()
 	avance()
  baisseBrosse()
 	leveBrosse()
}

def fairetouslesV() {
  avance()
  avance()
  for (i <- 1 to 3) {
  	faireV()
  	gauche()
  	avance() ; avance() ; avance() ; avance() ; avance()
	}
  avance()
  avance()
  gauche()
  avance()
  avance()
  gauche()
  avance()
  avance()
  droite()
  
}
  
def faireO() {
  faireV()
  avance()
  droite()
  faireV()
  
def fairetouslesO() {
  for (i <- 1 to 4) {
    avance() ; avance() ; avance() ; avance()
  	gauche()
    avance()
 	  faireO()
  	gauche()
  	gauche()
  	avance() ; avance() ; avance() ; avance() ; avance() ; avance()
  	faireO()
  	gauche()
  	gauche()
  	avance() ; avance() ; avance() ; avance()
  	gauche()
  }  
}
  